# ESP32WiFi2

./: CLAUDE.md  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/main/: CMakeLists.txt  app_ap_manager.cpp  app_ap_manager.h
examples/custom_prefs/: CMakeLists.txt
examples/custom_prefs/main/: app_preferences.cpp  app_preferences.h  main.cpp
examples/minimal/: CMakeLists.txt
examples/minimal/main/: CMakeLists.txt  main.cpp
include/: ESP32WiFi2.h  base_access_point_manager.h  base_preferences.h  boot_manager.h  logging.h  tz_data.h  wifi_types.h
src/: base_access_point_manager.cpp  boot_manager.cpp
